[package]

name    = "sdl2_image"
version = "0.0.1-alpha.1"
authors = [ "xsleonard" ]
description = "SDL2_image bindings and wrappers"
license = "MIT"

[lib]

name       = "sdl2_image"
path       = "src/sdl2_image/lib.rs"


[[bin]]

name = "demo"
path = "src/demo/main.rs"

[dependencies]
sdl2 = "0.0.26"
sdl2-sys = "*"
bitflags = "*"

[dependencies.sdl2]
git = "https://github.com/o01eg/rust-sdl2"
